cluster/gitops/cilium/cilium/ui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name hubble-ui
  labels:
    k8s-app: *app_name
    app.kubernetes.io/part-of: cilium
spec:
  hostnames:
    - hubble.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: *app_name
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
